Fixed some K8s deployment YAML files

--- a/employee-K8s.yaml
+++ b/employee-K8s.yaml
@@ -1,36 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: snyk-employee-api
+  name: springboot-employee-api-apples
+  namespace: apples
 spec:
   selector:
     matchLabels:
-      app: snyk-employee-api
+      app: springboot-employee-api-apples
   replicas: 1
   template:
     metadata:
       labels:
-        app: snyk-employee-api
+        app: springboot-employee-api-apples
     spec:
       containers:
-        - name: snyk-employee-api
-          image: pasapples/springbootemployee:cnb
+        - name: springboot-employee-api-apples
+          image: pasapples/springbootemployee:multi-stage-add-layers
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
-
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: snyk-employee-api-lb
-  labels:
-    name: snyk-employee-api-lb
-spec:
-  ports:
-    - port: 80
-      targetPort: 8080
-      protocol: TCP
-  selector:
-    app: snyk-employee-api
-  type: LoadBalancer
