--- a/Dockerfile.multi-stage-add-layers
+++ b/Dockerfile.multi-stage-add-layers
@@ -4,6 +4,7 @@ COPY ${JAR_FILE} application.jar
 RUN java -Djarmode=layertools -jar application.jar extract
 
 FROM openjdk:11.0.13-slim-buster
+#FROM openjdk:11-jre-slim
 COPY --from=builder dependencies/ ./
 COPY --from=builder snapshot-dependencies/ ./
 COPY --from=builder spring-boot-loader/ ./
