--- a/Dockerfile.multi-stage-add-layers
+++ b/Dockerfile.multi-stage-add-layers
@@ -3,8 +3,8 @@ ARG JAR_FILE=target/springbootemployee-0.0.1-SNAPSHOT.jar
 COPY ${JAR_FILE} application.jar
 RUN java -Djarmode=layertools -jar application.jar extract
 
-FROM openjdk:11.0.13-slim-buster
-#FROM openjdk:11-jre-slim
+FROM --platform=linux/amd64 openjdk:11.0.13-slim-buster
+#FROM --platform=linux/amd64 openjdk:18-oracle
 COPY --from=builder dependencies/ ./
 COPY --from=builder snapshot-dependencies/ ./
 COPY --from=builder spring-boot-loader/ ./
