Add files for ARGOCD deployment

--- a/argocd/snyk-scan.yaml
+++ b/argocd/snyk-scan.yaml
@@ -13,7 +13,7 @@ spec:
           image: snyk/snyk-cli:npm
           command: ["/bin/sh","-c"]
           args:
-            - git clone https://github.com/papicella/springbootemployee-api
+            - git clone https://github.com/papicella/springbootemployee-api.git
             - snyk auth $SNYK_TOKEN
             - snyk iac test argocd/employee-K8s.yaml || true
           env:
